src/test/contracts/negative/fail2.ligo
function hello (const x : int) : return
  block {
      const boom : int = x
  } with boom